# Astrologer-API

./: .gitignore  pyproject.toml
app/routers/: main_router.py
app/types/: response_models.py
