[project]
name = "astrologer-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "kerykeion>=4.26.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytz>=2024.2",
    "scour>=0.38.2",
    "types-pytz>=2025.2.0.20250516",
    "typing-extensions>=4.13.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "types-requests>=2.32.0.20250515",
]
